--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,41 +59,86 @@
     line-height: 24px;
     color: #333333;
 }
+
 #menu ul li a:hover{
     background-color: #999999;
     color: white;
 }
 
-#banner{
-    display: flex;
+.banner{
+    display: none;
+    width: 100%;
     height: 768px;
     align-items: center;
-}
-
-.banner2{
-    background-image: url(https://picsum.photos/seed/picsum/1440/768);
+    justify-content: center;
     background-size: cover;
     background-position: center;
+    position: absolute;
+}
+
+.active{
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+}
+
+.bgBanner{
+    width: 100%;
+    height: 768px;
+    position: relative;
 }
 
 .btnBanner{
-    background-color: #0076FF;
     padding: 10px 20px;
     box-sizing: border-box;
     cursor: pointer;
 }
 
+.btnBanner:hover{
+    background-color: #0076FF;
+}
+
+.back{
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 15px 15px 0;
+    user-select: none;
+}
+
+.next{
+    position: absolute;
+    right: 0;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 15px 0 0 15px;
+    user-select: none;
+}
+
+.dotSlider{
+    position: absolute;
+    bottom: 2%;
+}
+
 .dot.active{
-    background-color: #000000;
+    background-color: #ffffff;
 }
 
 .dot{
     display: inline;
     padding:0 10px;
-    background-color: #0076FF;
+    border: 1px solid white;
     box-sizing: border-box;
     border-radius: 100px;
     margin: 0 5px;
@@ -131,6 +176,7 @@
     font-size: 16px;
     line-height: 24px;
     color: #ffff;
+    cursor: pointer;
 }
 
 .text-banner input:focus{
